2002-07-16  Duncan Mak  <duncan@ximian.com>

	* TestCheckButton.cs:
	* TestTooltip.cs: Added copyright material.

	* TestColorSelection.cs: Attempt to do something new after color
	is selected. ColorSelection.CurrentColor (get) doesn't seem to
	work right now, bug 27834.

	* TestDialog.cs: Removed debugging messages and beautified the dialog.

	* TestFlipping.cs: New test to show widget flipping.

	* TestRadioButton.cs: Changed the constructors used to build the
	radio buttons to work around bug 27833.

	* Makefile: Added TestFlipping.cs.

	* WidgetViewer.cs (AddWindow): Another convenience method for
	adding new Test dialogs.

2002-07-15  Duncan Mak  <duncan@ximian.com>

	* WidgetViewer.cs (AddButton): New convenience method so that I don't have to type
	the same thing when adding a new test button.

2002-07-13  Duncan Mak  <duncan@ximian.com>

	* *.cs: Added copyright material.

	* *.cs: Checking in testgtk# to CVS.
	

				

	
